Correct horizontal alignment of topics links on Homepage.

--- a/scss/modules/home/_nav.scss
+++ b/scss/modules/home/_nav.scss
@@ -143,6 +143,9 @@
             -webkit-column-break-inside: avoid;
             page-break-inside: avoid;
             break-inside: avoid;
+            &:first-child {
+                margin-top: 0;
+            }
         }
         &-topServices {
             box-sizing: border-box;
